[package]
name = "qurop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.1.0"
confy = { version = "0.5" }
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
x11rb = "0.12"
