[package]
name = "qurop"
description = "Turn Linux applications into Quake-style dropdowns."
version = "0.1.0"
authors = ["Aru Sahni <aru@arusahni.net>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/arusahni/qurop"
keywords = ["x11", "utility", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.1.0"
confy = { version = "0.5" }
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
x11rb = "0.12"
